--- a/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
@@ -104,6 +104,14 @@
 			</div>
 		</div>
 		<div class="col-sm-2">
+			<label class="control-label">Fecha desde</label>
+			<p class="form-control-static form-control">@recuperoFacturaForm("fecha_desde").value</p>
+		</div>
+		<div class="col-sm-2">
+			<label class="control-label">Fecha hasta</label>
+			<p class="form-control-static form-control">@recuperoFacturaForm("fecha_hasta").value</p>
+		</div>
+		<div class="col-sm-2">
 			<label class="control-label">Forma de pago </label>
 			<p class="form-control-static form-control">
 			@recuperoFacturaForm("tipo_pago").value match {
