--- a/app/views/recupero/recuperoFactura/formRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/formRecuperoFactura.scala.html
@@ -157,6 +157,18 @@
 			</div>
 		</div>
 		<div class="col-sm-2">
+			<label class="control-label">Fecha Desde</label>
+			<div class="form-group">
+				@inputText(recuperoFacturaForm("fecha_desde"),'class -> "form-control date", 'autocomplete -> "off",'id-> "fecha_desde")
+			</div>
+		</div>
+		<div class="col-sm-2">
+			<label class="control-label">Fecha Hasta</label>
+			<div class="form-group">
+				@inputText(recuperoFacturaForm("fecha_hasta"),'class -> "form-control date", 'autocomplete -> "off",'id-> "fecha_hasta")
+			</div>
+		</div>
+		<div class="col-sm-2">
 			<label class="control-label">Forma de pago</label>
 			<div class="form-group @if(recuperoFacturaForm.error("tipo_pago")  != null) {has-error}else{has-required}">
 				@select(recuperoFacturaForm("tipo_pago"),options(""->"Seleccionar", "efectivo"->"Efectivo","cheque"->"Cheque","tarjeta"->"Tarjeta","transferencia"->"Transferencia"), 'class -> "form-control select", 'id -> "tipoPago")
