--- a/app/views/equipo/equipoHistoria/lineaEquipoHistoria.scala.html
+++ b/app/views/equipo/equipoHistoria/lineaEquipoHistoria.scala.html
@@ -15,7 +15,7 @@
 
 	<td>
 	@if(editable){
-		<a class="btn btn-default btn-xs eliminarEquipoHistoria" href="@controllers.equipo.routes.EquipoHistoriaController.eliminar(historia.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
+		<a class="btn btn-default btn-xs eliminar" href="@controllers.equipo.routes.EquipoHistoriaController.eliminar(historia.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
 	}
 	</td>
 
