--- a/app/views/equipo/equipoHistoria/formEquipoHistoria.scala.html
+++ b/app/views/equipo/equipoHistoria/formEquipoHistoria.scala.html
@@ -2,6 +2,7 @@
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
+<script src="@routes.Assets.at("plugins/jquery.numeric_input.min.js")" type="text/javascript"></script>
 
 
 @if(flash.containsKey("error")) {
@@ -12,21 +13,24 @@
 <script>
 $(function(){
 	$('.searchModal').modalSearch();
+	$("#fecha").mask("99/99/9999");
 });
 </script>
 
 <div class="row">
 	@inputText(lineaForm("equipo_id"), 'type -> "hidden")
+
 	<div class="col-sm-2">
 		<label class="control-label">Fecha</label>
 		<div class="form-group @if(lineaForm.error("fecha")  != null) {has-error}else{has-required}">
-			@inputText(lineaForm("fecha"),'class -> "form-control date", 'autocomplete -> "off",'id->"fecha_nc")
+			@inputText(lineaForm("fecha"),'class -> "form-control date", 'id->"fecha")
 		</div>
 		@lineaForm("fecha").error.map{ error =>
 			<div class="text-error">@error.message</div>
 		}
 	</div>
-	<div class="col-sm-12">
+
+	<div class="col-sm-10">
 		<label for="cuenta" class="control-label">Descripcion</label>
 		<div class="input-group">
 			@textarea(lineaForm("descripcion"), 'class -> "form-control", 'id -> "nota", 'rows -> "1",'cols -> "500")
@@ -38,13 +42,13 @@ $(function(){
 </div>
 <div class="row form-actions">
     <div class="col-lg-offset-4 col-lg-8">
+    	<a href="" class="btn btn-default cancelar"><i class="glyphicon glyphicon-floppy-remove"></i>Cancelar</a>
       <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-floppy-disk"></i>Guardar</button>
-      <a href="" class="btn btn-default cancelar"><i class="glyphicon glyphicon-floppy-remove"></i>Cancelar</a>
+
     </div>
 </div>
 <script>
 $( function(){
-
 
 });
 </script>
