--- a/app/views/equipo/equipoHistoria/verEquipoHistoria.scala.html
+++ b/app/views/equipo/equipoHistoria/verEquipoHistoria.scala.html
@@ -1,3 +1,3 @@
-@(detalle:  models.equipos.EquipoHistoria)
+@(historia:  models.equipos.EquipoHistoria)
 
-@views.html.equipo.equipoHistoria.lineaEquipoHistoria(detalle, true)
+@views.html.equipo.equipoHistoria.lineaEquipoHistoria(historia, true)
