--- a/app/views/equipo/equipo/contenidoTabHistorias.scala.html
+++ b/app/views/equipo/equipo/contenidoTabHistorias.scala.html
@@ -2,7 +2,7 @@
 @import java.util.List
 
 @if(equipoForm.field("id").value == null || equipoForm.field("id").value == ""){
-	<p>Para cargar productos primero debe dar de alta el Equipo</p>
+	<p>Para cargar historias primero debe dar de alta el Equipo</p>
 } else {
 	<script>
 	$( function (){
