--- a/app/views/equipo/equipoHistoria/indexEquipoHistoria.scala.html
+++ b/app/views/equipo/equipoHistoria/indexEquipoHistoria.scala.html
@@ -7,7 +7,7 @@
 
 	<p>
 
-		@if(editable && Permiso.check("equipoHistoriaAgregar")){
+		@if(editable && Permiso.check("equipoHistoriaCrear")){
 			<a class="btn btn-default btn-xs" href="#" id="nuevoEquipoHistoria"><i class="glyphicon glyphicon-plus"></i> Nuevo</a>
 		}
 	</p>
