--- a/app/views/equipo/equipoIncidencia/formEquipoIncidencia.scala.html
+++ b/app/views/equipo/equipoIncidencia/formEquipoIncidencia.scala.html
@@ -41,7 +41,7 @@ $(function(){
 		}
 	</div>
 </div>
-<div>
+<div  class="row">
 	<div class="col-sm-2">
 		<div class="form-group @if(lineaForm.error("tipo_incidencia_id") != null) {has-error}">
 			<label for="tipo_pago" class="control-label">Tipo Incidencia</label>
