--- a/app/views/equipo/equipoHistoria/lineaEquipoHistoria.scala.html
+++ b/app/views/equipo/equipoHistoria/lineaEquipoHistoria.scala.html
@@ -1,8 +1,12 @@
 @(historia: models.equipos.EquipoHistoria, editable: Boolean)
+@import helper._
+@import utils._
+@import models.auth._
+
 <tr data-id="@historia.id">
 
 		<td class="accion-editar">
-			@if(editable){
+			@if(editable && Permiso.check("equipoHistoriaEditar")){
 				<a class="btn btn-default btn-xs modificarEquipoHistoria" href="@controllers.equipo.routes.EquipoHistoriaController.editar(historia.id)">
 				<i class="glyphicon glyphicon-edit"></i></a>
 			}
@@ -14,9 +18,9 @@
 	<td></td>
 
 	<td>
-	@if(editable){
-		<a class="btn btn-default btn-xs eliminar" href="@controllers.equipo.routes.EquipoHistoriaController.eliminar(historia.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
-	}
+		@if(editable && Permiso.check("equipoHistoriaEliminar")){
+			<a class="btn btn-default btn-xs eliminar" href="@controllers.equipo.routes.EquipoHistoriaController.eliminar(historia.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
+		}
 	</td>
 
 </tr>
