--- a/app/views/equipo/equipo/indexEquipo.scala.html
+++ b/app/views/equipo/equipo/indexEquipo.scala.html
@@ -98,7 +98,9 @@
 						<input type="checkbox" name="checkAll" id="checkAll"/>
 					</th>
 					<th width="30">#</th>
+					<th>Serie</th>
 					<th>Nombre</th>
+					<th>Lugar</th>
 					<th width="30" align="center">Incidencias</th>
 					<th width="100" align="center">Estado</th>
 					<th width="30">#</th>
@@ -115,7 +117,9 @@
 						</a>
 						}
 					</td>
+					<td>@(lc.serie)</td>
 					<td>@(lc.nombre)</td>
+					<td>@(lc.organigrama.nombre)</td>
 					<td style="text-align: center;">@(lc.getIncidencias())</td>
 					<td style="text-align: center;">@(lc.estado.nombre)</td>
 					<td>
