--- a/app/views/equipo/equipo/formEquipo.scala.html
+++ b/app/views/equipo/equipo/formEquipo.scala.html
@@ -18,6 +18,15 @@
 	@inputText(equipoForm("id"), 'type -> "hidden", 'id -> "equipoId")
 	<input type="hidden" name=@UriTrack.getKey() value="@UriTrack.code()" />
 	<div class="row">
+		<div class="col-sm-2">
+			<div class="form-group @if(equipoForm.error("serie") != null) {has-error}else{has-required}">
+				<label for="inputDenominacion" class="control-label">Serie</label>
+				@inputText(equipoForm("serie"), 'class -> "form-control")
+				@equipoForm("serie").error.map{ error =>
+					<div class="text-error">@error.message</div>
+				}
+			</div>
+		</div>
 
 		<div class="col-sm-3">
 			<div class="form-group @if(equipoForm.error("nombre") != null) {has-error}else{has-required}">
