--- a/app/views/equipo/equipo/verEquipo.scala.html
+++ b/app/views/equipo/equipo/verEquipo.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import utils._
 @scripts = {
-	<script src="@routes.Assets.at("javascripts/haberes/centroCosto.js")" type="text/javascript"></script>
+
 }
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
@@ -31,6 +31,13 @@
 
 	<input type="hidden" id="equipoId" name="equipoId" value="@lc.id"/>
 	<div class="row">
+
+			<div class="col-sm-2">
+			<div class="form-group">
+				<label class="control-label">Serie</label>
+				<p class="form-control-static form-control">@lcForm.field("serie").value</p>
+			</div>
+		</div>
 
 		 <div class="col-sm-3">
 			<div class="form-group">
