--- a/app/views/equipo/equipo/verEquipo.scala.html
+++ b/app/views/equipo/equipo/verEquipo.scala.html
@@ -32,10 +32,16 @@
 	<input type="hidden" id="equipoId" name="equipoId" value="@lc.id"/>
 	<div class="row">
 
-			<div class="col-sm-2">
+		<div class="col-sm-2">
 			<div class="form-group">
 				<label class="control-label">Serie</label>
 				<p class="form-control-static form-control">@lcForm.field("serie").value</p>
+			</div>
+		</div>
+		<div class="col-sm-2">
+			<div class="form-group">
+				<label class="control-label">N° Inventario</label>
+				<p class="form-control-static form-control">@lcForm.field("numero_inventario").value</p>
 			</div>
 		</div>
 
