--- a/app/views/haberes/liquidacionEmbargos/formLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/formLiquidacionEmbargo.scala.html
@@ -1,6 +1,97 @@
-@(embargoForm: Form[models.haberes.LiquidacionEmbargo],embargo: models.haberes.LiquidacionEmbargo)
+@(baseForm: Form[models.haberes.LiquidacionEmbargo])
 @import helper._
 @import utils._
 @import models.auth._
 @import models.haberes._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+<script>
+$( function(){ $('.searchModal').modalSearch();})
+</script>
+
+<div class="row menu-acciones">
+	<div class="col-sm-10">
+		<button type="submit" class="btn btn-default" title="Guardar liquidacion retencion"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>
+		<a href="@if(request().getHeader("referer")){ @request().getHeader("referer") } else {@controllers.haberes.routes.LiquidacionEmbargosController.index()@UriTrack.decode()}" title="Cancelar editar" class="btn btn-default"><i class="glyphicon glyphicon-floppy-remove"></i> Cancelar</a>
+	</div>
+	<div class="col-sm-2">
+		<a href="@UriTrack.decode()" title="Volver al listado" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
+	</div>
+</div>
+<input type="hidden" name=@UriTrack.getKey() value="@UriTrack.code()" />
+	@inputText(baseForm("id"), 'type -> "hidden", 'id -> "liquidacionEmbargoId")
+	<div class="row">
+		<div class="col-sm-4">
+			<label for="puestoLaboral" class="control-label">Puesto Laboral</label>
+			<div class="input-group @if(baseForm.error("puesto_laboral_id") != null) {has-error}else{has-required}">
+				@inputText(baseForm("puestoLaboral.legajo.agente.apellido"),'class -> "form-control", 'id -> "puesto_laboral")
+				@inputText(baseForm("puesto_laboral_id"),'hidden -> "hidden", 'id -> "puesto_laboral_id")
+				<span class="input-group-addon"><a href="#" class="searchModal" id="searchPuestoLaboral"
+															data-title="Selección de Puesto Laboral"
+															data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscar()"
+															data-height="650"
+															data-width="700"
+															data-listen="modal.seleccion.puestoLaboral.simple"
+															data-label="#puesto_laboral"
+															data-field="#puesto_laboral_id">
+															<i class="glyphicon glyphicon-search"></i></a></span>
+			</div>
+			@baseForm("puesto_laboral_id").error.map{ error =>
+				<div class="text-error">@error.message</div>
+			}
+		</div>
+		<div class="col-sm-4">
+			<div class="form-group @if(baseForm.error("proveedor_id") != null) {has-error}else{has-required}">
+				<label for="inputProveedor" class="control-label">Contraparte</label>
+				<div class="input-group">
+				@inputText(baseForm("proveedor.nombre"), 'class -> "form-control", 'id -> "proveedor")
+				@inputText(baseForm("proveedor_id"), 'hidden -> "hidden", 'id -> "proveedor_id")
+				<span class="input-group-addon">
+					<a href="#" class="searchModal"
+								id="searchProveedor"
+								data-title="Selección de Proveedores"
+								data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
+								data-height="650"
+								data-width="700"
+								data-listen="modal.seleccion.proveedor.simple"
+								data-label="#proveedor"
+								data-field="#proveedor_id">
+						<i class="glyphicon glyphicon-search"></i>
+					</a>
+				</span>
+				</div>
+				@baseForm("proveedor_id").error.map{ error =>
+					<div class="text-error">@error.message</div>
+			 	}
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-2">
+			<div class="form-group @if(baseForm.error("fecha_inicio") != null) {has-error}">
+				<label for="fecha_factura" class="control-label">Fecha Inicio</label>
+				@inputText(baseForm("fecha_inicio"),'class -> "form-control date", 'id -> "fecha_inicio")
+				@baseForm("fecha_inicio").error.map{ error =>
+					<div class="text-error">@error.message</div>
+				}
+			</div>
+		</div>
+
+		<div class="col-sm-2">
+			<div class="form-group @if(baseForm.error("fecha_fin") != null) {has-error}">
+				<label for="fecha_factura" class="control-label">Fecha Fina</label>
+				@inputText(baseForm("fecha_fin"),'class -> "form-control date", 'id -> "fecha_fin")
+				@baseForm("fecha_fin").error.map{ error =>
+					<div class="text-error">@error.message</div>
+				}
+			</div>
+		</div>
+		<div class="col-sm-2">
+			<div class="form-group @if(baseForm.error("tipo_embargo_id") != null) {has-error}">
+				<label class="control-label">Tipo Cuenta</label>
+				@select(baseForm("tipo_embargo_id"),TipoEmbargo.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
+				@baseForm("tipo_embargo_id").error.map{ error =>
+					<div class="text-error">@error.message</div>
+				}
+			</div>
+		</div>
+	</div>
