--- a/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
@@ -9,18 +9,191 @@
 	<script src="@routes.Assets.at("javascripts/haberes/puestosLaborales.js")" type="text/javascript"></script>
 }
 
-@getClassEstado(i:Estado) = @{
+@getClassEstado(i:models.haberes.LiquidacionEmbargo) = @{
+
 	var classEstado:String = new String()
-	if(i != null && i.id == 55){
+
+	if(i.estado != null && i.estado.id == 52){
 		classEstado = "borrador"
-	}else if(i != null && i.id == 56){
+	}else if(i.estado != null && i.estado.id == 54){
 		classEstado = "cancelada"
-	}else if(i != null && i.id == 109){
+	}else if(i.estado != null && i.estado.id == 53){
 		classEstado = "autorizado"
 	}
+
 	classEstado
-
 }
 
-@views.html.haberes.mainHaberes("Lista de puestos laborales", scripts) {
+@views.html.haberes.mainHaberes("Lista de Embargos", scripts) {
+<div class="page-header">
+	<div class="row">
+		<div class="col-sm-7">
+			<h1>Lista de Retenciones</h1>
+		</div>
+
+		<div class="col-sm-5">
+
+			<div class="btn-header pull-right">
+				<a href="@controllers.haberes.routes.LiquidacionEmbargosController.crear()?@UriTrack.encode()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Retencion</a>
+			</div>
+
+
+		<div class="dropdown pull-right btn-header">
+		  	<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+		    	<i class="glyphicon glyphicon-list-alt"></i>
+		    	Reportes
+		    	<span class="caret"></span>
+		  	</button>
+			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+
+			</ul>
+		</div>
+
+		<div class="dropdown pull-right btn-header ">
+		  	<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+		  		 <i class="glyphicon glyphicon-cog"></i>
+		    	Acciones
+		    	<span class="caret"></span>
+		  	</button>
+			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+
+			</ul>
+		</div>
+
+
+		</div>
+	</div>
+</div>
+
+@views.html.tags.successError()
+
+	<div id="actions">
+		<form action="" method="GET">
+			<div class="row" >
+					<div class="col-sm-10 filtrosEstados" id="filtrosEstados">
+						<div class="btn-group">
+						  <button type="button" rel="borrador" class="btn btn-default btn-filtros">
+						  	<i class="glyphicon glyphicon-pencil size-14"></i><br>Borrador
+						  	@checkbox(formBuscador("btnFiltro[0]"), 'hidden -> "hidden")
+						  </button>
+
+						 <button type="button" rel="aprobado" class="btn btn-default btn-filtros">
+						  	<i class="glyphicon glyphicon-ok"></i><br>Aprobado
+						  	@checkbox(formBuscador("btnFiltro[1]"), 'hidden -> "hidden")
+						 </button>
+
+						 <button type="button" rel="aprobado" class="btn btn-default btn-filtros">
+						  	<i class="glyphicon glyphicon-ok"></i><br>Cancelado
+						  	@checkbox(formBuscador("btnFiltro[2]"), 'hidden -> "hidden")
+						 </button>
+
+						</div>
+					</div>
+				</div>
+
+			<div class="row">
+
+				<div class="col-sm-4">
+					<label class="control-label">Puesto laboral</label>
+					<div class="input-group">
+						@inputText(formBuscador("puestoLaboral.legajo.agente.apellido"),'class -> "form-control", 'id -> "puesto_laboral_todos")
+						@inputText(formBuscador("puesto_laboral_id"), 'hidden -> "hidden", 'id -> "puesto_laboral_todos_id")
+						<span class="input-group-addon">
+							<a href="#" class="searchModal"
+										id="searchPuestoLaboral"
+										data-title="Selección de puesto laboral"
+										data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscarTodos()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.puestoLaboral.simple"
+										data-label="#puesto_laboral_todos"
+										data-field="#puesto_laboral_todos_id">
+								<i class="glyphicon glyphicon-search"></i>
+							</a>
+						</span>
+					</div>
+				</div>
+
+
+
+
+			</div>
+			<div class="row">
+				<div class="col-sm-2">
+					<div class="form-group">
+					<label for="buscar" class="control-label">&nbsp;</label>
+					<button  class="form-control btn btn-primary">Buscar</button>
+					</div>
+				</div>
+				<div class="col-sm-2">
+					<div class="form-group">
+					<label for="limpiar" class="control-label">&nbsp;</label>
+					<a href="@controllers.haberes.routes.LiquidacionEmbargosController.index()"  class="form-control btn btn-default">Limpiar</a>
+					</div>
+				</div>
+			</div>
+		</form>
+	</div>
+	@if(buscador.getTotalRowCount == 0) {
+
+        <div class="well">
+            <em>No se encuentran Retenciones</em>
+        </div>
+
+    } else {
+		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+		<table id="listaLiquidacionPuestos" class="table table-striped table-bordered">
+			<thead>
+				<tr>
+					<th width="30">
+						<input type="checkbox" name="checkAll" id="checkAll"/>
+					</th>
+					<th width="30">#</th>
+					<th>Puesto Laboral</th>
+					<th>Contraparte</th>
+					<th>Fecha Inicio</th>
+					<th>Fecha Fin</th>
+					<th>Estado</th>
+					<th>#</th>
+				</tr>
+			</thead>
+			<tbody>
+			@for(lc <- buscador.getList) {
+				 <tr class="pointer @getClassEstado(lc)" data-estado="@lc.estado_id" data-href="@controllers.haberes.routes.LiquidacionEmbargosController.ver(lc.id)&@UriTrack.encode()">
+				 	<td><input type="checkbox" name="check_listado[]" value="@lc.id" class="notSeleccion" id="check-@lc.id"/></td>
+				 	<td>
+						@if(Permiso.check("liquidacionEmbargoEditar") && lc.estado.id != Estado.LIQUIDACION_EMBARGO_APROBADO) {
+						<a class="btn btn-default btn-xs notSeleccion" href="@controllers.haberes.routes.LiquidacionEmbargosController.editar(lc.id)&@UriTrack.encode()">
+							<i class="glyphicon glyphicon-edit"></i>
+						</a>
+						}
+					</td>
+				 	<td>@(lc.puestoLaboral.legajo.agente.apellido)</td>
+				 	<td>@(lc.proveedor.nombre)</td>
+				 	<td class="">@if(lc.fecha_inicio != null){@(utils.DateUtils.formatDate(lc.fecha_inicio))}</td>
+					<td class="">@if(lc.fecha_fin != null){@(utils.DateUtils.formatDate(lc.fecha_fin))}</td>
+					<td class="estado" align="center">@(lc.estado.nombre)</td>
+				 </tr>
+			 }
+
+	        </tbody>
+	         <tfoot>
+	         	<tr></tr>
+	         </tfoot>
+        </table>
+
+        <div class="pagination pull-right">
+		    @views.html.helpers.paginador(buscador, controllers.haberes.routes.LiquidacionEmbargosController.index())
+		</div>
+
+	}
+
+
+
+
+
+	<script>
+	$( function(){ $('.searchModal').modalSearch();})
+	</script>
 }
+
