--- a/app/views/haberes/liquidacionEmbargos/editarLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/editarLiquidacionEmbargo.scala.html
@@ -19,6 +19,7 @@
 	@helper.form(action = controllers.haberes.routes.LiquidacionEmbargosController.actualizar()) {
 		@inputText(baseForm("id"), 'hidden -> "hidden")
 		@views.html.haberes.liquidacionEmbargos.formLiquidacionEmbargo(baseForm)
+		@views.html.haberes.liquidacionEmbargos.tabsLiquidacionEmbargo(true,baseForm)
 	}
 
 }
