--- a/app/views/recupero/recuperoRecibo/indexRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/indexRecibo.scala.html
@@ -58,7 +58,7 @@
 				<label class="control-label">Punto Venta</label>
 				<div class="">
 				@select(formBuscador("puntoventa_id"),
-				PuntoVenta.find.all().map { p => p.id.toString -> p.numero}, 'class -> "form-control select", '_default -> "Seleccionar")
+				PuntoVenta.getPuntoVentaPermisos().map { p => p.id.toString -> p.numero}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</div>
 			</div>
 
@@ -118,7 +118,7 @@
 			<div class="col-sm-2">
 				<div class="form-group">
 				<label for="nombre" class="control-label">&nbsp;</label>
-				<a href="@controllers.recupero.routes.RecuperoPlanillasController.index()"  class="form-control btn btn-default">Limpiar</a>
+				<a href="@controllers.recupero.routes.RecuperoRecibosController.index()"  class="form-control btn btn-default">Limpiar</a>
 				</div>
 			</div>
 		</div>
