--- a/app/views/haberes/mainHaberes.scala.html
+++ b/app/views/haberes/mainHaberes.scala.html
@@ -9,10 +9,12 @@
 					<li class="titulo">Liquidación</li>
 						<li><a href="@controllers.haberes.routes.LiquidacionMesesController.index()">Liquidaciones</a></li>
 						<li><a href="@controllers.haberes.routes.LiquidacionPuestosController.index()">Liquidaciones Puestos</a></li>
+						<li><a href="@controllers.haberes.routes.PuestosLaboralesController.index()">Puestos Laborales</a></li>
 						<li><a href="@controllers.haberes.routes.NovedadesController.index()?activo=activo">Novedades</a></li>
+						<li><a href="@controllers.haberes.routes.LiquidacionEmbargosController.index()">Retenciones</a></li>
 						<li><a href="@controllers.haberes.routes.LiquidacionConceptosController.index()">Conceptos</a></li>
 						<li><a href="@controllers.haberes.routes.LiquidacionBaseCalculosController.index()">Base cálculo</a></li>
-						<li><a href="@controllers.haberes.routes.PuestosLaboralesController.index()">Puestos Laborales</a></li>
+
 					<li class="titulo">Controles</li>
 						<li><a href="@controllers.haberes.routes.ControlHaberes.controlGuardiasPorAgentePorPeriodo()">Guardias Por Agente</a></li>
 					<li class="titulo">Configuración</li>
