--- a/app/views/haberes/liquidacionEmbargos/verLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/verLiquidacionEmbargo.scala.html
@@ -56,8 +56,14 @@
 
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="fecha_factura" class="control-label">Fecha Fina</label>
+				<label for="fecha_factura" class="control-label">Fecha Fin</label>
 				<p class="form-control-static form-control">@lcForm.field("fecha_fin").value</p>
+			</div>
+		</div>
+		<div class="col-sm-2">
+			<div class="form-group">
+				<label for="fecha_factura" class="control-label">Importe Tope</label>
+				<p class="form-control-static form-control">@lcForm.field("importe").value</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
